# fastapi-sqlalchemy-v0

./: alembic.ini  crud_example.py  items_views.py  main.py  pyproject.toml  theory.py
alembic/: env.py
alembic/versions/: 2024_06_03_0750-5823fc7453d0_create_prod.py  2024_06_03_0808-05c0d2d89296_create_user_table.py  2024_06_03_0817-4ad1032573a0_create_posts_table.py  2024_06_03_1041-6c79bdf46f82_add_mixin.py  2024_06_05_1350-6f8d2cf9d165_create_order_table.py  2024_06_05_1415-5ae70a62412c_create_order_m2m_middle_table.py  2024_06_05_1550-7f34b2b0f975_assotiation_table.py
api_v1/: __init__.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: __init__.py  config.py  db_helper.py
core/models/: __init__.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
users/: crud.py  schemas.py  views.py
